--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,5 +12,5 @@
 
     <string name="quickie_scan_qr_code">Scan QR code</string>
     <string name="quickie_please_wait">Please wait…</string>
-    <string name="place_the_qr_code">Place the QR Code in the indicated frame</string>
+    <string name="place_the_qr_code">Coloca el Barcode en el marco indicado.</string>
 </resources>
