--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -57,5 +57,7 @@
     <string name="attachment_summary_on">Automatically download attachments for incoming emails
     </string>
     <string name="attachment_summary_off">Only download attachments when manually requested</string>
+    <string name="action_scan_code">Scanear Codigo Barras</string>
+    <string name="result_scan_code">Resultado Codigo Escaneado</string>
 
 </resources>
